tests/compile_fail/invalid_nth_selector_struct_literal.rs
use surgeist_style::{NthPattern, NthSelector};

fn main() {
    let _selector = NthSelector {
        pattern: NthPattern::odd(),
        filter: None,
    };
}
